Fixed icon visibility issues

--- a/svg/drawpad/style.css
+++ b/svg/drawpad/style.css
@@ -274,6 +274,11 @@ line {
 	stroke-linejoin: round;
 }
 
+path {
+	stroke: none;
+	fill: var(--text);
+}
+
 polyline {
 	fill: none;
 	stroke: var(--text);
